--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ discord-py-slash-command = "^3.0.3"
 bs4 = "^0.0.1"
 maya = "^0.6.1"
 treelib = "^1.6.1"
+pylatexenc = "^2.10"
 
 [tool.poetry.dev-dependencies]
 
