--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ bs4 = "^0.0.1"
 maya = "^0.6.1"
 treelib = "^1.6.1"
 pylatexenc = "^2.10"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 
